--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,9 @@
     <dimen name="recycler_item_desc_margin_top">20dp</dimen>
     <dimen name="recyclerview_margin_top">10dp</dimen>
     <dimen name="text_username_margin_top">5dp</dimen>
-    <dimen name="user_icon_margin_top">30dp</dimen>
+    <dimen name="user_icon_margin_top">10dp</dimen>
+    <dimen name="btn_search_margin_top">30dp</dimen>
     <dimen name="user_icon_width">130dp</dimen>
     <dimen name="user_icon_height">130dp</dimen>
+    <dimen name="btn_search_margin_right">5dp</dimen>
 </resources>
